--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+firebase_app_id_file.json
+google-services.json
+GoogleService-Info.plist
+firebase_app_id_file.json
+firebase_options.dart
